<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nitsilchar.hp.passwordStorage.activity.AboutUsActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--About Password Storage -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:srcCompat="@mipmap/icon"
                        android:padding="@dimen/padding_small"
                        android:layout_gravity="center_horizontal"
                        />

                    <TextView
                        android:id="@+id/about_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/message_text_size"
                        android:text="@string/app_description"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- About Contributors -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_contributors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:text="@string/app_contributors"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/contributors_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/app_contributors_desc"
                        android:textSize="@dimen/message_text_size" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- About Reporting Issues -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_app_report_issues"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:text="@string/app_report_issues"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/app_report_issues_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/app_report_issues_desc"
                        android:textSize="@dimen/message_text_size" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- About Licence Information -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_app_license_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:text="@string/app_license_information"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/app_license_info_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/app_license_information_desc"
                        android:textSize="@dimen/message_text_size" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


