<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_text"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_marginTop="50dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:id="@+id/layout1"
            android:layout_width="200dp"
            android:background="@drawable/button_background"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp">

            <Button
                android:id="@+id/btn_login"
                android:padding="15dp"
                android:text="@string/login_regstr_blogin"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/layout2"
            android:layout_below="@+id/layout1"
            android:layout_width="200dp"
            android:background="@drawable/button2"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btn_register"
                android:padding="15dp"
                android:text="@string/login_regstr_bregstr"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>


    </LinearLayout>

</RelativeLayout>


